...
            android:layout_marginLeft="15dp"
            android:text="@string/monitor_current_connection"
            android:textColor="?attr/colorOnBackground"
            android:textStyle="bold" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/home_switch_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="true"
...
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@android:drawable/ic_menu_info_details" />
        </RelativeLayout>

        <TextView
            android:id="@+id/home_text_security"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/insecure"
            android:textAppearance="@android:style/TextAppearance.Holo.Small"
...
