...
            android:layout_marginTop="6dp" />
    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/list_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/device_info_panel">

        <RelativeLayout
            android:layout_width="fill_parent"
...
