<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    >

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

            <ExpandableListView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/loglistview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/linearLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                android:choiceMode="singleChoice"
                android:divider="@android:color/transparent"
                android:dividerHeight="5dp"
                android:padding="5dp"
                android:headerDividersEnabled="false"
                android:childDivider="@android:color/transparent">

    </ExpandableListView>

    <RelativeLayout
        style="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:id="@+id/linearLayout"
        android:layout_alignParentBottom="true" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageButton
            android:id="@+id/SortButton"
            style="@android:style/Widget.DeviceDefault.ActionButton.Overflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:src="@drawable/ic_sort_button" />

        <ImageButton
            android:id="@+id/FilterButton"
            style="@android:style/Widget.DeviceDefault.ActionButton.Overflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/GroupButton"
            android:src="@drawable/ic_filter_button" />

        <ImageButton
            android:id="@+id/DeleteButton"
            style="@android:style/Widget.DeviceDefault.ActionButton.Overflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/FilterButton"
            android:src="@drawable/ic_delete_button" />

        <ImageButton
            style="@android:style/Widget.DeviceDefault.ActionButton.Overflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/GroupButton"
            android:src="@drawable/ic_device_access_storage"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/SortButton"/>
    </RelativeLayout>


</RelativeLayout>
