...
    <string name="paranoid">Paranoid Mode</string>
    <string name="details">Connection info</string>
    <string name="not_connected">Not connected</string>
    <string name="attack">&#160;attack</string>
    <string name="attacks">&#160;attacks</string>
    <string name="secure">Secure</string>
    <string name="insecure">Insecure</string>
    <string name="logged">&#160;logged</string>
    <string name="recorded">&#160;recorded</string>
    <string name="zero_attacks">0 attacks recorded</string>

    <string name="information">Information</string>
	<string name="wifi_not_connected_msg">You are not connected to a WiFi network. \n\nPlease connect to one, before trying to activate HosTaGe.</string>
...
    <string name="drawer_settings">Settings</string>
    <string name="drawer_profile_manager">Profiles</string>
    <string name="drawer_app_info">About</string>
	<string name="drawer_statistics">Statistics</string>
	<string name="drawer_help">Help videos</string>

    <string name="button_title_apply">Apply</string>
    <string name="button_title_cancel">Cancel</string>
    <string name="shared_preference_path">dk.aau.netsec.hostage.preferences</string>
    <string name="UUID">9fc4f490-659e-11e3-949a-0800200c9a66</string>

    <string name="recorded_attacks">recorded attacks: </string>
    <string name="open_ports" translatable="false">port:</string>
...
    <string name="pref_sleeptime_default">500</string>
    <string name="pref_sleeptime_summary">Time in ms for stream sleeptime</string>
    <string name="pref_timeout_default">30</string>
    <string name="portscan">&#160;Portscan</string>
    <string name="portscans">&#160;Portscans</string>
    <string name="export_as_bro_signature" translatable="false">Export as Bro Signature</string>
    <string name="export_to_storage" translatable="false">Export to storage</string>
    <string name="synchronize" translatable="false">Synchronize</string>
    <string name="new_profile" translatable="false">New profile</string>
</resources>

